# uv-path-dependency-test

./: README.md
package1/: pyproject.toml
package2/: pyproject.toml
